--- a/helix-core/pom.xml
+++ b/helix-core/pom.xml
@@ -143,11 +143,11 @@
       <artifactId>snakeyaml</artifactId>
       <version>1.12</version>
     </dependency>
-    <dependency>
-      <groupId>io.dropwizard.metrics</groupId>
-      <artifactId>metrics-core</artifactId>
-      <version>3.2.3</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>io.dropwizard.metrics</groupId>-->
+<!--      <artifactId>metrics-core</artifactId>-->
+<!--      <version>3.2.3</version>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
