--- a/.github/workflows/Helix-PR-CI.yml
+++ b/.github/workflows/Helix-PR-CI.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Get Changed Files
-      uses: lots0logs/gh-action-get-changed-files@2.1.4
+      uses: UnicornGlobal/has-changes-action@v1.0.11
       with:
         token: ${{ github.token }}
       id: file-diff
